<?xml version="1.0"?>
<package format="2">
  <name>deepstream_yolo_ros</name>
  <version>0.1.0</version>
  <description>ROS1 Noetic package for NVIDIA DeepStream YOLO integration.</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information here -->
  </export>
</package>
